# MedEasy-v2

./: README.md  commands.txt  package-lock.json  package.json
backend/: db.sqlite3  pyproject.toml  requirements.txt
backend/accounts/: admin.py  models.py  schema.py  serializers.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_profileuser_is_staff.py
backend/backend/: db.sqlite3  settings.py  urls.py
backend/chatbot/: bot.py  models.py  tests.py  urls.py  views.py
backend/chatbot/migrations/: 0001_initial.py
backend/patient/: admin.py  models.py  schema.py  serializers.py  urls.py  views.py
backend/patient/migrations/: 0001_initial.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: index.js
frontend/src/app/: HomePage.tsx
frontend/src/app/(auth)/: Login.css  Login.tsx  SignIn.css  SignIn.tsx  SignUp.tsx
frontend/src/app/(tabs)/: AddPatient.tsx  ChatHomePage.tsx  addPatient.css
frontend/src/components/: PatientDetailView.js  PatientsView.js
frontend/src/components/MUI components/CustomSignIn/: SignInCard.js  SignUpCard.js
frontend/src/providers/: AuthProvider.js  PatientProvider.js
